<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rememberdate"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:height="30dp"
        android:nextFocusDown="@+id/fromdate"
        android:text="@string/from" />

    <EditText
        android:id="@+id/fromdate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/from"
        android:layout_below="@+id/from"
        android:ems="10"
        android:hint="@string/from_date"
        android:nextFocusDown="@+id/to" />

    <EditText
        android:id="@+id/todate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/rememberdate"
        android:layout_below="@+id/to"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/to_date"
        android:nextFocusDown="@+id/remember" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/todate"
        android:layout_below="@+id/fromdate"
        android:layout_marginTop="38dp"
        android:nextFocusDown="@+id/todate"
        android:text="@string/to" />

    <TextView
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rememberdate"
        android:layout_below="@+id/todate"
        android:layout_marginTop="44dp"
        android:nextFocusDown="@+id/rememberdate"
        android:text="@string/remember" />

    <EditText
        android:id="@+id/rememberdate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/remember"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/remember_date" />

</RelativeLayout>