<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txt1"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtToResetPass" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/cancel"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_alignRight="@+id/txt1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="42dp"
        android:background="@drawable/login_button_bg"
        android:ems="10"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="#000" />

    <Button
        android:id="@+id/search"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/cancel"
        android:layout_alignBottom="@+id/cancel"
        android:layout_alignLeft="@+id/txt1"
        android:background="@drawable/login_button_bg"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/cancel"
        android:padding="10dp"
        android:text="@string/search"
        android:textColor="#000" />

</RelativeLayout>