<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bes.redmineme_iredmineyou.MainActivity" >

    <TextView
        android:id="@+id/passId"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@+id/userId"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:nextFocusDown="@+id/login"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#cccccc" />

    <Button
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_below="@+id/passId"
        android:layout_centerInParent="true"
        android:layout_marginTop="21dp"
        android:background="@drawable/login_button_bg"
        android:ems="10"
        android:nextFocusDown="@+id/register"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#000" />

    <Button
        android:id="@+id/register"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_below="@+id/login"
        android:layout_centerInParent="true"
        android:layout_marginTop="21dp"
        android:background="@drawable/login_button_bg"
        android:ems="10"
        android:nextFocusDown="@+id/passwordForget"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="#000" />

    <TextView
        android:id="@+id/passwordForget"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_below="@+id/register"
        android:layout_centerInParent="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:padding="10dp"
        android:text="@string/passwordforget"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/welcome"
        android:textSize="15sp"
        android:textColor="#000" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/passId"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="66dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:nextFocusDown="@+id/passId"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#cccccc" />

</RelativeLayout>