<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/profilname"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/profilId"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/profilId"
        android:ems="20"
        android:text="@string/profil"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/servicename"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/serviceId"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/serviceId"
        android:ems="20"
        android:text="@string/service"
        android:textColor="#000000" />
    
    <TextView
        android:id="@+id/groupname"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/groupId"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/groupId"
        android:ems="20"
        android:text="@string/group"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/settingname"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/settingId"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/settingId"
        android:ems="20"
        android:text="@string/setting"
        android:textColor="#000000" />

    <ImageButton
        android:id="@+id/serviceId"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/profilId"
        android:layout_below="@+id/profilId"
        android:layout_marginTop="22dp"
        android:background="@drawable/login_button_bg"
        android:nextFocusLeft="@+id/servicename"
        android:src="@drawable/ic_redmineme" />

    <ImageButton
        android:id="@+id/profilId"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/login_button_bg"
        android:nextFocusLeft="@+id/profilname"
        android:src="@drawable/ic_profil" />

    <ImageButton
        android:id="@+id/groupId"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/serviceId"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/servicename"
        android:background="@drawable/login_button_bg"
        android:nextFocusLeft="@+id/groupname"
        android:src="@drawable/ic_group" />

    <ImageButton
        android:id="@+id/settingId"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/groupname"
        android:layout_marginTop="90dp"
        android:layout_toLeftOf="@+id/groupname"
        android:background="@drawable/login_button_bg"
        android:nextFocusLeft="@+id/settingname"
        android:src="@drawable/ic_setting" />

</RelativeLayout>